# Cpp_practice

./: .clangd  flake.nix
6_22/: 2.cpp  3.cpp  66.cpp
6_23/: 1.cpp  2.cpp  3.cpp
6_24/: #1.cpp#  #2.cpp#  1.cpp  2.cpp
6_25/: #3.cpp#  1.cpp  2.cpp  3.cpp  4.cpp
6_26/: 1.cpp  2.cpp  3  3.cpp  4.cpp
6_27/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
6_29/: 1.cpp  2.cpp
6_30/: 1.cpp  Linked_list.cpp
professional/CrashCourse/: #containers.cpp#  #enum.cpp#  #floats.cpp#  #if.cpp#  #initializer_lists.cpp#  #main.cpp#  #namespace.cpp#  #numerical_limits.cpp#  #print_line.cpp#  #scope.cpp#  #spaceship_operator.cpp#  CMakeLists.txt  Employee.cpp  Employee.cppm  EmployeeTest.cpp  attribute.cpp  containers.cpp  designated_initializer.cpp  employee.cppm  employee.pcm  enum.cpp  floats  floats.cpp  hello_world.cpp  if.cpp  initializer_lists.cpp  math.cpp    math.cppm  namespace.cpp  numerical_limits  numerical_limits.cpp  operation_convertion  operation_convertion.cpp  print_line  print_line.cpp  scope.cpp  spaceship_operator.cpp  structured_binding  structured_binding.cpp  type_alias.cpp  (+4 more)
professional/Strings/: #5.cpp#  #numeric_conversion.cpp#  1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  c_string.cpp  format_string.cpp  string_view.cpp
